--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
-version: '3'
+version: "3"
 
 services:
   client:
     build:
-      context: ./client  # Path to the React app (update this if it's elsewhere)
+      context: ./client # Path to the React app (update this if it's elsewhere)
     ports:
-      - "80:80"  # Expose port 80 of the React app
+      - "80:80" # Expose port 80 of the React app
     depends_on:
       - server
+    networks:
+      - backend
     environment:
       - REACT_APP_API_URL=http://server:3001
 
   server:
     build:
-      context: ./server  # Path to the Node.js Express app (update this if it's elsewhere)
+      context: ./server # Path to the Node.js Express app (update this if it's elsewhere)
     ports:
-      - "3001:3001"  # Expose port 5000 for the backend API
+      - "3001:3001" # Expose port 5000 for the backend API
     environment:
       - NODE_ENV=production
     networks:
